<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="topping1">Whipped Cream</string>
    <string name="topping2">Chocolate</string>
    <string name="quantity">Quantity</string>
    <string name="orderSummary">Order Summary</string>
    <string name="thankYou">Thank you!</string>
    <string name="total">Total</string>
    <string name="addChocolate">Add chocolate</string>
    <string name="addWhippedCream">Add whipped cream</string>
</resources>
